# arm-cortex-mx-core-tests

./: .editorconfig  .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci_pr_validation.yml
cmake/: add_asm_test.cmake
tests/: CMakeLists.txt
tests/arm-cortex-m0-core/: CMakeLists.txt  test_clear_bit_compiletime.cpp  test_clear_bit_runtime.cpp  test_is_bit_set_compiletime.cpp  test_is_bit_set_runtime.cpp  test_nvic.cpp  test_scb.cpp  test_set_bit_compiletime.cpp  test_set_bit_runtime.cpp  test_special_regs.cpp  test_systick.cpp
tests/arm-cortex-m0plus-core/: CMakeLists.txt  test_clear_bit_compiletime.cpp  test_clear_bit_runtime.cpp  test_is_bit_set_compiletime.cpp  test_is_bit_set_runtime.cpp  test_mpu.cpp  test_nvic.cpp  test_scb.cpp  test_set_bit_compiletime.cpp  test_set_bit_runtime.cpp  test_special_regs.cpp  test_systick.cpp
tests/arm-cortex-m1-core/: CMakeLists.txt  test_clear_bit_compiletime.cpp  test_clear_bit_runtime.cpp  test_is_bit_set_compiletime.cpp  test_is_bit_set_runtime.cpp  test_nvic.cpp  test_scb.cpp  test_scnscb.cpp  test_set_bit_compiletime.cpp  test_set_bit_runtime.cpp  test_special_regs.cpp  test_systick.cpp
tests/arm-cortex-m3-core/: CMakeLists.txt  test_clear_bit_compiletime.cpp  test_clear_bit_runtime.cpp  test_is_bit_set_compiletime.cpp  test_is_bit_set_runtime.cpp  test_mpu.cpp  test_nvic.cpp  test_scb.cpp  test_set_bit_compiletime.cpp  test_set_bit_runtime.cpp  test_special_regs.cpp  test_systick.cpp
tests/armv6m-intrinsics/: CMakeLists.txt  test_exceptions.cpp
tests/armv7m-intrinsics/: CMakeLists.txt  test_exceptions.cpp  test_exceptions_v7m.cpp
